editors/tree-sitter-floe/grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.import_declaration,
        $.export_declaration,
        $.default_export_declaration,
        $.function_declaration,
        $.type_declaration,
        $.const_declaration,
        $.for_block,
        $.impl_block,
        $.trait_declaration,
        $.test_block,
        $.use_declaration,
        $.expression_statement,
      ),

    // ── Imports ──────────────────────────────────────────────

    import_declaration: ($) =>
      seq(
        "import",
        optional("trusted"),
        "{",
        commaSep1(choice($.import_specifier, $.import_for_specifier)),
        "}",
        "from",
        $.string,
      ),

    import_specifier: ($) =>
      seq(optional("trusted"), $.identifier, optional(seq("as", $.identifier))),

    impl_block: ($) =>
      seq(
        optional("export"),
        "impl",
        field("trait", $.type_identifier),
        "for",
        field("type", $._type_expression),
        optional(seq(
          "{",
          repeat(seq(optional("export"), $.function_declaration)),
          "}",
        )),
      ),

    // ── Traits ──────────────────────────────────────────────

    self: (_$) => "self",

    // ── Test Blocks ─────────────────────────────────────────

    export_declaration: ($) =>
      seq("export", choice($.function_declaration, $.const_declaration, $.for_block)),

    // `export default foo` — promote a named binding to the default export.
    // Floe deliberately rejects the anonymous TS forms (`export default <expr>`,
    // `export default function|class|{...}`); the grammar only covers the
    // bare-identifier form.
    default_export_declaration: ($) =>
      seq("export", "default", field("name", $.identifier)),

    // ── Functions ───────────────────────────────────────────

    function_declaration: ($) =>
      seq(
        optional("async"),
        "let",
        field("name", choice($.identifier, $.type_identifier)),
        optional(field("type_parameters", $.type_parameters)),
        field("parameters", $.parameter_list),
        optional(seq("->", field("return_type", $._type_expression))),
        "=",
        field("body", $.block),
      ),

    parameter_list: ($) => seq("(", commaSep($.parameter), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $._type_expression))),
        optional(seq("=", field("default", $._expression))),
      ),

    // ── Types ───────────────────────────────────────────────

    type_declaration: ($) =>
      seq(
        optional("opaque"),
        choice("type", "typealias"),
        field("name", $.type_identifier),
        optional($.type_parameters),
        "=",
        field("definition", $._type_definition),
        optional($.deriving_clause),
      ),

    _type_definition: ($) =>
      choice($.union_type_definition, $.newtype_definition, $.record_type, $._type_expression),

    // Newtype with paren syntax: type UserId = UserId(string)
    union_type_definition: ($) =>
      prec.right(
        seq(
          optional("|"),
          $.variant,
          repeat1(seq("|", $.variant)),
        ),
      ),

    variant: ($) =>
      prec.right(1, seq(
        field("name", $.type_identifier),
        optional(choice(
          // Named-field variants: `{ field: Type, ... }`
          seq("{", commaSep1($.variant_field), "}"),
          // Positional variants: `(Type, ...)` — no field names
          seq("(", commaSep1($._type_expression), ")"),
        )),
      )),

    // Named field inside a brace-form variant. The name is required — the
    // Floe parser rejects type-only fields inside `{ ... }` variants.
    variant_field: ($) =>
      seq(
        field("name", $._field_name),
        ":",
        field("type", $._type_expression),
      ),

    record_type: ($) => seq("{", commaSep($.record_field), optional(","), "}"),

    record_field: ($) =>
      seq(
        field("name", $._field_name),
        ":",
        field("type", $._type_expression),
        optional(seq("=", field("default", $._expression))),
      ),

    // Floe accepts both lowercase (standard identifier) and uppercase
    // (type_identifier) names in field-name position, plus any word that
    // JavaScript reserves.
    _field_name: ($) =>
      choice($.identifier, $.type_identifier, $.reserved_property),

    // A word that JavaScript reserves. JavaScript accepts a reserved word as
    // a property name, so Floe accepts one as a record field, a member name,
    // a named argument and a JSX attribute, and never as a binding. This
    // list is `IdentRole::PropertyOnly` in
    // crates/floe-core/src/lexer/token.rs.
    reserved_property: ($) =>
      choice(
        "for",
        "const",
        "class",
        "throw",
        "null",
        "undefined",
        "any",
        "as",
        "enum",
        "void",
        "function",
        "if",
        "else",
        "return",
      ),

    // A name that reads a property: a member after `.`, a named argument
    // label, or a JSX attribute.
    _property_name: ($) => choice($.identifier, $.reserved_property),

    _type_expression: ($) =>
      choice(
        $.primitive_type,
        $.type_identifier,
        $.generic_type,
        $.qualified_type,
        $.function_type,
        $.unit_type,
        $.array_type,
        $.tuple_type,
      ),

    qualified_type: ($) =>
      seq($.type_identifier, ".", $.type_identifier),

    primitive_type: ($) =>
      choice("number", "string", "boolean", "unknown"),

    type_identifier: ($) => /[A-Z][a-zA-Z0-9]*/,

    generic_type: ($) =>
      seq($.type_identifier, $.type_arguments),

    type_arguments: ($) =>
      seq("<", commaSep1($._type_expression), ">"),

    type_parameters: ($) =>
      seq("<", commaSep1($.type_identifier), ">"),

    unit_type: ($) => seq("(", ")"),

    array_type: ($) => seq("Array", "<", $._type_expression, ">"),

    const_declaration: ($) =>
      seq(
        "let",
        choice(
          $.identifier,
          $.object_pattern,
          $.tuple_pattern,
          $.invalid_array_pattern,
        ),
        optional(seq(":", $._type_expression)),
        "=",
        $._expression,
      ),

    object_pattern: ($) =>
      seq("{", commaSep1($.identifier), "}"),

    tuple_pattern: ($) =>
      seq("(", commaSep1($.identifier), optional(","), ")"),

    // `let [a, b] = ...` is not valid Floe (use tuple form `(a, b)` instead).
    // Parsing it as a dedicated node gives the LSP a targeted diagnostic
    // anchor rather than a generic ERROR.
    invalid_array_pattern: ($) =>
      seq("[", commaSep1($.identifier), optional(","), "]"),

    // ── Use (callback flattening) ───────────────────────────

    // `use` is a contextual keyword. Inside a block, `use x <- expr` is a
    // bind statement; bare `use` and `use(x)` / `foo.use` / `import { use }`
    // are plain identifier uses (React 19's `use()` hook, `@floeorg/hono`
    // middleware registration, etc). prec.dynamic(-1) lets call_expression
    // win when both would parse — which is only the case when there's no
    // `<-`, i.e. the non-bind reading.
    use_declaration: ($) =>
      prec.dynamic(
        -1,
        seq(
          "use",
          optional(
            choice(
              field("binding", $.identifier),
              seq(
                "(",
                commaSep1(field("binding", $.identifier)),
                ")",
              ),
              field("binding", $.object_pattern),
            ),
          ),
          "<-",
          field("call", $._expression),
        ),
      ),

    // ── Expressions ─────────────────────────────────────────

    expression_statement: ($) => $._expression,

    _expression: ($) =>
      choice(
        $.primary_expression,
        $.binary_expression,
        $.unary_expression,
        $.pipe_expression,
        $.unwrap_expression,
        $.match_expression,
        $.call_expression,
        $.tagged_template_expression,
        $.member_expression,
        $.index_expression,
        $.construct_expression,
        $.brace_construct_expression,
        $.variant_expression,
        $.arrow_closure,
        $.dot_shorthand,
        $.jsx_element,
        $.jsx_self_closing,
        $.jsx_fragment,
        $.block,
        $.assignment_expression,
        $.collect_expression,
        $.return_statement,
      ),

    primary_expression: ($) =>
      choice(
        $.identifier,
        $.type_identifier,
        $.number,
        $.string,
        $.template_literal,
        $.boolean,
        $.array_literal,
        $.parenthesized_expression,
        $.unit_value,
        $.clear,
        $.unchanged,
        $.todo,
        $.unreachable,
        $.mock_expression,
        $.self,
        $.underscore,
      ),

    identifier: ($) => /[a-z_$][a-zA-Z0-9_$]*/,

    number: ($) =>
      choice(
        /\d[\d_]*(\.\d[\d_]*)?/,
        /0[xX][\da-fA-F_]+/,
        /0[bB][01_]+/,
        /0[oO][0-7_]+/,
      ),

    string: ($) =>
      seq('"', optional($.string_content), '"'),

    string_content: ($) => /[^"]*/,

    template_literal: ($) =>
      seq(
        "`",
        repeat(
          choice($.template_string_content, $.template_interpolation),
        ),
        "`",
      ),

    template_string_content: ($) => /[^`$\\]+|\\./,

    template_interpolation: ($) =>
      seq("${", $._expression, "}"),

    boolean: ($) => choice("true", "false"),

    array_literal: ($) => seq("[", commaSep($._expression), optional(","), "]"),

    unit_value: ($) => prec(2, seq("(", ")")),

    // None is now a regular identifier, not a keyword

    binary_expression: ($) =>
      choice(
        ...[
          ["+", "add"],
          ["-", "add"],
          ["*", "multiply"],
          ["/", "multiply"],
          ["%", "multiply"],
          ["<", "compare"],
          [">", "compare"],
          ["<=", "compare"],
          [">=", "compare"],
          ["==", "equality"],
          ["!=", "equality"],
          ["&&", "and"],
          ["||", "or"],
        ].map(([op, prec_name]) =>
          prec.left(
            prec_name,
            seq(
              field("left", $._expression),
              field("operator", alias(op, $.operator)),
              field("right", $._expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      prec.left(
        "unary",
        seq(
          field("operator", $.unary_operator),
          field("operand", $._expression),
        ),
      ),

    unary_operator: ($) => choice("!", "-"),

    // ── Pipe ────────────────────────────────────────────────

    pipe_expression: ($) =>
      prec.left(
        "pipe",
        seq(
          field("left", $._expression),
          choice("|>", "|>?"),
          field("right", $._expression),
        ),
      ),

    match_expression: ($) =>
      seq("match", field("subject", $._expression), "{", repeat($.match_arm), "}"),

    match_arm: ($) =>
      seq(
        field("pattern", $._pattern),
        optional($.match_guard),
        "->",
        field("body", $._expression),
        optional(","),
      ),

    _pattern: ($) =>
      choice(
        $.variant_pattern,
        $.literal_pattern,
        $.binding_pattern,
        $.wildcard_pattern,
        $.record_pattern,
        $.range_pattern,
      ),

    literal_pattern: ($) =>
      choice($.number, $.string, $.boolean),

    wildcard_pattern: ($) => "_",

    call_expression: ($) =>
      prec.left(
        "call",
        seq(field("function", $._expression), $.argument_list),
      ),

    tagged_template_expression: ($) =>
      prec.left(
        "call",
        seq(field("tag", $._expression), field("template", $.template_literal)),
      ),

    argument_list: ($) =>
      seq("(", commaSep($.argument), optional(","), ")"),

    argument: ($) =>
      choice(
        seq(field("label", $._property_name), ":", field("value", $._expression)),
        $._expression,
      ),

    // ── Members ─────────────────────────────────────────────

    member_expression: ($) =>
      prec.left(
        "member",
        seq(field("object", $._expression), ".", field("property", $._property_name)),
      ),

    construct_expression: ($) =>
      prec("construct", seq(
        field("type", $.type_identifier),
        optional(seq(".", field("variant_name", $.type_identifier))),
        "(",
        optional(seq("..", field("spread", $._expression))),
        optional(","),
        commaSep($.construct_field),
        optional(","),
        ")",
      )),

    construct_field: ($) =>
      seq(field("name", $._field_name), ":", field("value", $._expression)),

    // Brace-form record construction: `User { id: "1", name, ..base }`
    variant_expression: ($) =>
      choice(
        // Qualified: Filter.All (Type.Variant - both uppercase)
        prec("member", seq(
          field("type", $.type_identifier),
          ".",
          field("variant", $.type_identifier),
        )),
        // Built-in constructor (Settable)
        seq("Value", "(", field("value", $._expression), ")"),
      ),

    // ── Lambdas ─────────────────────────────────────────────

    arrow_closure: ($) =>
      prec.right(
        "pipe",
        seq(
          "(",
          commaSep($.lambda_parameter),
          ")",
          "->",
          field("body", $._expression),
        ),
      ),

    lambda_parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $._type_expression))),
      ),

    // ── Dot shorthand ───────────────────────────────────────

    dot_shorthand: ($) =>
      prec.left(
        "compare",
        seq(
          ".",
          field("field", $.identifier),
          optional(
            seq(
              field("operator", choice("==", "!=", "<", ">", "<=", ">=")),
              field("value", $._expression),
            ),
          ),
        ),
      ),

    // ── JSX ─────────────────────────────────────────────────

    jsx_element: ($) =>
      seq($.jsx_opening_element, repeat($._jsx_child), $.jsx_closing_element),

    jsx_self_closing: ($) =>
      seq("<", field("name", $._jsx_name), repeat($.jsx_attribute), "/>"),

    jsx_fragment: ($) =>
      seq("<>", repeat($._jsx_child), "</>"),

    jsx_opening_element: ($) =>
      seq("<", field("name", $._jsx_name), repeat($.jsx_attribute), ">"),

    jsx_closing_element: ($) =>
      seq("</", field("name", $._jsx_name), ">"),

    _jsx_name: ($) =>
      choice($.jsx_member_expression, $.identifier, $.type_identifier),

    jsx_member_expression: ($) =>
      seq(
        field("object", choice($.identifier, $.type_identifier)),
        ".",
        field("property", choice($.identifier, $.type_identifier)),
      ),

    jsx_attribute: ($) =>
      choice(
        seq(
          field("name", $._property_name),
          "=",
          field("value", choice($.string, $.jsx_expression)),
        ),
        field("name", $._property_name),
      ),

    jsx_expression: ($) =>
      seq("{", $._expression, "}"),

    _jsx_child: ($) =>
      choice($.jsx_text, $.jsx_expression, $.jsx_element, $.jsx_self_closing),

    jsx_text: ($) => /[^<>{]+/,

    // ── Blocks ──────────────────────────────────────────────

    block: ($) => seq("{", repeat($._item), "}"),

    // ── Statements ──────────────────────────────────────────

    return_statement: ($) =>
      prec.right(seq("return", optional($._expression))),
