editors/tree-sitter-floe/test/corpus/declarations.txt
===
Import declaration
===

import { useState } from "react"

---

(source_file
  (import_declaration
    (import_specifier
      (identifier))
    (string
      (string_content))))

===
Import with alias
===

import { foo as bar } from "baz"

---

(source_file
  (import_declaration
    (import_specifier
      (identifier)
      (identifier))
    (string
      (string_content))))

===
Multiple imports
===

import { a, b, c } from "mod"

---

(source_file
  (import_declaration
    (import_specifier
      (identifier))
    (import_specifier
      (identifier))
    (import_specifier
      (identifier))
    (string
      (string_content))))

===
Function declaration
===

let greet(name: string) -> string = {
    name
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (expression_statement
        (primary_expression
          (identifier))))))

===
Function with uppercase name
===

let HomePage() -> JSX.Element = {
    return ()
}

---

(source_file
  (function_declaration
    name: (type_identifier)
    parameters: (parameter_list)
    return_type: (qualified_type
      (type_identifier)
      (type_identifier))
    body: (block
      (expression_statement
        (return_statement
          (primary_expression
            (unit_value)))))))

===
Generic function declaration
===

let identity<T>(x: T) -> T = {
    x
}

---

(source_file
  (function_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (block
      (expression_statement
        (primary_expression
          (identifier))))))

===
Generic function with multiple type parameters
===

let pair<A, B>(a: A, b: B) -> A = {
    a
}

---

(source_file
  (function_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_identifier)
      (type_identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier))
      (parameter
        name: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (block
      (expression_statement
        (primary_expression
          (identifier))))))

===
Const declaration
===

let x = 42

---

(source_file
  (const_declaration
    (identifier)
    (primary_expression
      (number))))

===
Const with type annotation
===

let name: string = "hello"

---

(source_file
  (const_declaration
    (identifier)
    (primitive_type)
    (primary_expression
      (string
        (string_content)))))

===
Const with array pattern is an error
===

let [a, b] = pair

---

(source_file
  (const_declaration
    (invalid_array_pattern
      (identifier)
      (identifier))
    (primary_expression
      (identifier))))

===
Const with tuple pattern
===

let (a, b) = pair

---

(source_file
  (const_declaration
    (tuple_pattern
      (identifier)
      (identifier))
    (primary_expression
      (identifier))))

===
Const with destructuring object
===

let { x, y } = point

---

(source_file
  (const_declaration
    (object_pattern
      (identifier)
      (identifier))
    (primary_expression
      (identifier))))

===
Type declaration - record
===

type Todo = {
    id: string,
    text: string,
    done: boolean,
}

---

(source_file
  (type_declaration
    name: (type_identifier)
    definition: (record_type
      (record_field
        name: (identifier)
        type: (primitive_type))
      (record_field
        name: (identifier)
        type: (primitive_type))
      (record_field
        name: (identifier)
        type: (primitive_type)))))

===
Type declaration - union
===

type Filter =
    | All
    | Active
    | Completed

---

(source_file
  (type_declaration
    name: (type_identifier)
    definition: (union_type_definition
      (variant
        name: (type_identifier))
      (variant
        name: (type_identifier))
      (variant
        name: (type_identifier)))))

===
Type declaration - union with fields
===

type Validation =
    | Valid { text: string }
    | TooShort
    | Empty

---

(source_file
  (type_declaration
    name: (type_identifier)
    definition: (union_type_definition
      (variant
        name: (type_identifier)
        (variant_field
          name: (identifier)
          type: (primitive_type)))
      (variant
        name: (type_identifier))
      (variant
        name: (type_identifier)))))

===
Export function
===

export let hello() -> string = {
    "world"
}

---

(source_file
  (export_declaration
    (function_declaration
      name: (identifier)
      parameters: (parameter_list)
      return_type: (primitive_type)
      body: (block
        (expression_statement
          (primary_expression
            (string
              (string_content))))))))

===
Export const
===

export let pi = 3

---

(source_file
  (export_declaration
    (const_declaration
      (identifier)
      (primary_expression
        (number)))))

===
Generic type
===

type Box<T> = {
    value: T,
}

---

(source_file
  (type_declaration
    name: (type_identifier)
    (type_parameters
      (type_identifier))
    definition: (record_type
      (record_field
        name: (identifier)
        type: (type_identifier)))))

===
Use bind with single binding
===

let _test() -> string = {
    use x <- doSomething(42)
    x
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (primitive_type)
    body: (block
      (use_declaration
        binding: (identifier)
        call: (call_expression
          function: (primary_expression
            (identifier))
          (argument_list
            (argument
              (primary_expression
                (number))))))
      (expression_statement
        (primary_expression
          (identifier))))))

===
Use bind with object destructure
===

let _test() -> number = {
    use { a, b } <- provideValues()
    a + b
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (primitive_type)
    body: (block
      (use_declaration
        binding: (object_pattern
          (identifier)
          (identifier))
        call: (call_expression
          function: (primary_expression
            (identifier))
          (argument_list)))
      (expression_statement
        (binary_expression
          left: (primary_expression
            (identifier))
          operator: (operator)
          right: (primary_expression
            (identifier)))))))

===
Use bind with zero binding
===

let _test() -> () = {
    use <- delay(1000)
    Console.log("done")
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (unit_type)
    body: (block
      (use_declaration
        call: (call_expression
          function: (primary_expression
            (identifier))
          (argument_list
            (argument
              (primary_expression
                (number))))))
      (expression_statement
        (call_expression
          function: (member_expression
            object: (primary_expression
              (type_identifier))
            property: (identifier))
          (argument_list
            (argument
              (primary_expression
                (string
                  (string_content))))))))))

===
Default export
===

let app = 1
export default app

---

(source_file
  (const_declaration
    (identifier)
    (primary_expression
      (number)))
  (default_export_declaration
    name: (identifier)))

===
Impl trait for type
===

impl Display for User {
    let display(self) -> string = { self.name }
}

---

(source_file
  (impl_block
    trait: (type_identifier)
    type: (type_identifier)
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)))
      return_type: (primitive_type)
      body: (block
        (expression_statement
          (member_expression
            object: (primary_expression
              (self))
            property: (identifier)))))))

===
Empty impl for trait defaults
===

impl Eq for User

---

(source_file
  (impl_block
    trait: (type_identifier)
    type: (type_identifier)))

===
Record type with uppercase field names
===

type Bindings = {
    DB: Option<D1Database>,
    API: string,
}

---

(source_file
  (type_declaration
    name: (type_identifier)
    definition: (record_type
      (record_field
        name: (type_identifier)
        type: (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier))))
      (record_field
        name: (type_identifier)
        type: (primitive_type)))))

===
Record type with fields named after JavaScript reserved words
===

type Payload = {
    for: string,
    class: string,
    function: string,
    if: string,
}

---

(source_file
  (type_declaration
    name: (type_identifier)
    definition: (record_type
      (record_field
        name: (reserved_property)
        type: (primitive_type))
      (record_field
        name: (reserved_property)
        type: (primitive_type))
      (record_field
        name: (reserved_property)
        type: (primitive_type))
      (record_field
        name: (reserved_property)
        type: (primitive_type)))))
