editors/tree-sitter-floe/test/corpus/expressions.txt
===
Pipe expression
===

let result = text |> String.trim

---

(source_file
  (const_declaration
    (identifier)
    (pipe_expression
      left: (primary_expression
        (identifier))
      right: (member_expression
        object: (primary_expression
          (type_identifier))
        property: (identifier)))))

===
Chained pipe expression
===

let count(todos: Array<Todo>) -> number = {
    todos
        |> Array.filter(.done == false)
        |> Array.length
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (array_type
          (type_identifier))))
    return_type: (primitive_type)
    body: (block
      (expression_statement
        (pipe_expression
          left: (pipe_expression
            left: (primary_expression
              (identifier))
            right: (call_expression
              function: (member_expression
                object: (primary_expression
                  (type_identifier))
                property: (identifier))
              (argument_list
                (argument
                  (binary_expression
                    left: (dot_shorthand
                      field: (identifier))
                    operator: (operator)
                    right: (primary_expression
                      (boolean)))))))
          right: (member_expression
            object: (primary_expression
              (type_identifier))
            property: (identifier)))))))

===
Match expression
===

match len {
    0 -> Empty,
    _ -> Valid(trimmed),
}

---

(source_file
  (expression_statement
    (match_expression
      subject: (primary_expression
        (identifier))
      (match_arm
        pattern: (literal_pattern
          (number))
        body: (primary_expression
          (type_identifier)))
      (match_arm
        pattern: (wildcard_pattern)
        body: (call_expression
          function: (primary_expression
            (type_identifier))
          (argument_list
            (argument
              (primary_expression
                (identifier)))))))))

===
Arrow closure
===

let f = (x) -> x

---

(source_file
  (const_declaration
    (identifier)
    (arrow_closure
      (lambda_parameter
        name: (identifier))
      body: (primary_expression
        (identifier)))))

===
Zero-arg arrow closure
===

let f = () -> handleAdd()

---

(source_file
  (const_declaration
    (identifier)
    (arrow_closure
      body: (call_expression
        function: (primary_expression
          (identifier))
        (argument_list)))))

===
Call expression
===

let r = foo(1, 2)

---

(source_file
  (const_declaration
    (identifier)
    (call_expression
      function: (primary_expression
        (identifier))
      (argument_list
        (argument
          (primary_expression
            (number)))
        (argument
          (primary_expression
            (number)))))))

===
Labeled arguments
===

let t = Todo(id: v4(), text: text, done: false)

---

(source_file
  (const_declaration
    (identifier)
    (call_expression
      function: (primary_expression
        (type_identifier))
      (argument_list
        (argument
          label: (identifier)
          value: (call_expression
            function: (primary_expression
              (identifier))
            (argument_list)))
        (argument
          label: (identifier)
          value: (primary_expression
            (identifier)))
        (argument
          label: (identifier)
          value: (primary_expression
            (boolean)))))))

===
Member expression
===

let v = obj.field

---

(source_file
  (const_declaration
    (identifier)
    (member_expression
      object: (primary_expression
        (identifier))
      property: (identifier))))

===
Variant expression
===

let f = Filter.All

---

(source_file
  (const_declaration
    (identifier)
    (variant_expression
      type: (type_identifier)
      variant: (type_identifier))))

===
Dot shorthand
===

let f = .done == true

---

(source_file
  (const_declaration
    (identifier)
    (binary_expression
      left: (dot_shorthand
        field: (identifier))
      operator: (operator)
      right: (primary_expression
        (boolean)))))

===
Binary expression
===

let r = a + b * c

---

(source_file
  (const_declaration
    (identifier)
    (binary_expression
      left: (primary_expression
        (identifier))
      operator: (operator)
      right: (binary_expression
        left: (primary_expression
          (identifier))
        operator: (operator)
        right: (primary_expression
          (identifier))))))

===
Unary expression
===

let r = !done

---

(source_file
  (const_declaration
    (identifier)
    (unary_expression
      operator: (unary_operator)
      operand: (primary_expression
        (identifier)))))

===
Template literal
===

let s = `hello ${name}`

---

(source_file
  (const_declaration
    (identifier)
    (primary_expression
      (template_literal
        (template_string_content)
        (template_interpolation
          (primary_expression
            (identifier)))))))

===
Tagged template expression
===

let q = sql`select ${id}`

---

(source_file
  (const_declaration
    (identifier)
    (tagged_template_expression
      tag: (primary_expression
        (identifier))
      template: (template_literal
        (template_string_content)
        (template_interpolation
          (primary_expression
            (identifier)))))))

===
Array literal
===

let a = [1, 2, 3]

---

(source_file
  (const_declaration
    (identifier)
    (primary_expression
      (array_literal
        (primary_expression
          (number))
        (primary_expression
          (number))
        (primary_expression
          (number))))))

===
Return statement
===

let foo() -> number = {
    return 42
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (primitive_type)
    body: (block
      (expression_statement
        (return_statement
          (primary_expression
            (number)))))))

===
Spread in constructor
===

let t = Todo(..old, done: true)

---

(source_file
  (const_declaration
    (identifier)
    (construct_expression
      type: (type_identifier)
      spread: (primary_expression
        (identifier))
      (construct_field
        name: (identifier)
        value: (primary_expression
          (boolean))))))

===
Use as identifier in call position (React 19 use() hook)
===

let data = use(promise)

---

(source_file
  (const_declaration
    (identifier)
    (call_expression
      function: (primary_expression
        (identifier))
      (argument_list
        (argument
          (primary_expression
            (identifier)))))))

===
Use as identifier in member position
===

let x = foo.use

---

(source_file
  (const_declaration
    (identifier)
    (member_expression
      object: (primary_expression
        (identifier))
      property: (identifier))))

===
Use as identifier in import specifier
===

import { use } from "react"

---

(source_file
  (import_declaration
    (import_specifier
      (identifier))
    (string
      (string_content))))


===
Member named after a JavaScript reserved word
===

let target = payload.for

---

(source_file
  (const_declaration
    (identifier)
    (member_expression
      object: (primary_expression
        (identifier))
      property: (reserved_property))))

===
Named argument labelled with a JavaScript reserved word
===

let e = render(for: "name")

---

(source_file
  (const_declaration
    (identifier)
    (call_expression
      function: (primary_expression
        (identifier))
      (argument_list
        (argument
          label: (reserved_property)
          value: (primary_expression
            (string
              (string_content))))))))
