editors/tree-sitter-floe/test/corpus/jsx.txt
===
JSX element
===

let e = <div>hello</div>

---

(source_file
  (const_declaration
    (identifier)
    (jsx_element
      (jsx_opening_element
        name: (identifier))
      (jsx_text)
      (jsx_closing_element
        name: (identifier)))))

===
JSX self-closing
===

let e = <input />

---

(source_file
  (const_declaration
    (identifier)
    (jsx_self_closing
      name: (identifier))))

===
JSX fragment
===

let e = <>hello</>

---

(source_file
  (const_declaration
    (identifier)
    (jsx_fragment
      (jsx_text))))

===
JSX with string attribute
===

let e = <div className="foo">text</div>

---

(source_file
  (const_declaration
    (identifier)
    (jsx_element
      (jsx_opening_element
        name: (identifier)
        (jsx_attribute
          name: (identifier)
          value: (string
            (string_content))))
      (jsx_text)
      (jsx_closing_element
        name: (identifier)))))

===
JSX with expression attribute
===

let e = <div onClick={handler}>text</div>

---

(source_file
  (const_declaration
    (identifier)
    (jsx_element
      (jsx_opening_element
        name: (identifier)
        (jsx_attribute
          name: (identifier)
          value: (jsx_expression
            (primary_expression
              (identifier)))))
      (jsx_text)
      (jsx_closing_element
        name: (identifier)))))

===
JSX with expression child
===

let e = <p>{name}</p>

---

(source_file
  (const_declaration
    (identifier)
    (jsx_element
      (jsx_opening_element
        name: (identifier))
      (jsx_expression
        (primary_expression
          (identifier)))
      (jsx_closing_element
        name: (identifier)))))

===
JSX with component name
===

let e = <MyComponent />

---

(source_file
  (const_declaration
    (identifier)
    (jsx_self_closing
      name: (type_identifier))))

===
JSX member expression
===

let e = <Select.Trigger>Open</Select.Trigger>

---

(source_file
  (const_declaration
    (identifier)
    (jsx_element
      (jsx_opening_element
        name: (jsx_member_expression
          object: (type_identifier)
          property: (type_identifier)))
      (jsx_text)
      (jsx_closing_element
        name: (jsx_member_expression
          object: (type_identifier)
          property: (type_identifier))))))

===
JSX member expression self-closing
===

let e = <Select.Value />

---

(source_file
  (const_declaration
    (identifier)
    (jsx_self_closing
      name: (jsx_member_expression
        object: (type_identifier)
        property: (type_identifier)))))

===
JSX boolean attribute
===

let e = <input disabled />

---

(source_file
  (const_declaration
    (identifier)
    (jsx_self_closing
      name: (identifier)
      (jsx_attribute
        name: (identifier)))))

===
JSX nested elements
===

let e = <div><span>hi</span></div>

---

(source_file
  (const_declaration
    (identifier)
    (jsx_element
      (jsx_opening_element
        name: (identifier))
      (jsx_element
        (jsx_opening_element
          name: (identifier))
        (jsx_text)
        (jsx_closing_element
          name: (identifier)))
      (jsx_closing_element
        name: (identifier)))))

===
JSX attributes named after JavaScript reserved words
===

let e = <label for="name" class="row" />

---

(source_file
  (const_declaration
    (identifier)
    (jsx_self_closing
      name: (identifier)
      (jsx_attribute
        name: (keyword_property)
        value: (string
          (string_content)))
      (jsx_attribute
        name: (keyword_property)
        value: (string
          (string_content))))))

===
JSX attributes named after Floe keywords
===

let v = <label match="a" fn="b" />

---

(source_file
  (const_declaration
    (identifier)
    (jsx_self_closing
      name: (identifier)
      (jsx_attribute
        name: (keyword_property)
        value: (string
          (string_content)))
      (jsx_attribute
        name: (keyword_property)
        value: (string
          (string_content))))))
